--- a/style.css
+++ b/style.css
@@ -1,82 +1,128 @@
-:root {
-    /* Existing color definitions */
-    --primary-color: #797e4c;
-    --background-color: #f5f5f5;
-    --text-color: #222222;
-    font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-
-    /* Dark mode color definitions */
-    --dark-background-color: #121212;
-    --dark-text-color: #e0e0e0;
-    --dark-primary-color: #797e4c;
+html{
+    width:0;
+    height:0;
 }
 
-/* Basic Resets and Global Styles */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+html::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 body {
-    font-family: var(--font-family);
-    color: var(--text-color);
-    background-color: var(--background-color);
+    background-color:#030305;
     line-height: 1.5;
+    position: relative;
 }
 
-a {
-    color: var(--primary-color);
-    text-decoration: none;
-}
+#logo {
+    width: 50px;
+    height: 50px;
+    transform: scale(5);
+    position: relative;
+    margin-left: 5%;
+    top: 25%;
+    /* Initial state */
+    opacity: 0;
+    transform: scale(0.95);
+    animation-name: easeInLogo;
+    animation-duration: 1.1s;
+    animation-timing-function: ease;
+    animation-fill-mode: forwards;
+    animation-delay: 1.1s; /* Delay the animation by 5 seconds */
+  }
+  
+  @keyframes easeInLogo {
+    from {
+      opacity: 0;
+      transform: scale(2);
+    }
+    to {
+      opacity: 1;
+      transform: scale(5);
+    }
+  }
 
-a:hover {
-    text-decoration: none;
-}
+nav{
+    position: fixed;
+    background: transparent;
+    width: 100%;
+    z-index: 2;
+    border-bottom: #262535;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 70px;
 
-ul {
-    list-style-type: none;
 }
-
-/* Stylish Navigation Bar */
-header {
-    background-color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    transition:0.2s;
-}
-
-header:hover{
-    background-color: #222222;
-    top:0;
-    transition: 0.2s;
-}
-
-.scrolled{
-    background-color: #222222;
-    transition: 0.2s;
-}
-
-nav ul {
+nav ul{
     display: flex;
-    justify-content: center;
-    padding: 1rem;
+    gap:2em;
+    margin-left:23vw;
+    transition: 400ms ease-in-out;
+    animation-delay: 1s;
+    opacity:0;
+    animation: easeInNav 1.1s ease 2s forwards;
+
+}
+@keyframes easeInNav {
+    from {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-nav ul li {
-    margin: 0 15px;
+
+nav li{
+    list-style: none;
 }
+
 
 nav a {
-    font-weight: 600;
-    transition: color 0.3s, border-bottom 0.3s; /* Add border-bottom transition */
+    position: relative;
+    color: #d887c4;
+    font-size: 125%;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+}
+.scrolled{
+    animation: 270ms ease forwards 3s;
 }
 
 nav a:hover {
     color:#ccb34d;
 }
+.hero-img{
+    opacity: 0;
+    transform: scale(1);
+    animation: easeInImage 1.2s forwards;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    height: 110vh;
+  }
+
+  nav a:hover{
+    border-bottom: 1px #d887c4;
+
+  }
+  
+  
+  /* Define the keyframes for the 'easeInImage' animation */
+  @keyframes easeInImage {
+    from {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1.10);
+    }
+  }
 
 /* Hero Section and Titles */
 section {
