--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
       opacity: 0;
       transform: scale(2);
     }
+    
     to {
       opacity: 1;
       transform: scale(5);
@@ -61,8 +62,8 @@ nav ul{
     animation-delay: 1s;
     opacity:0;
     animation: easeInNav 1.1s ease 2s forwards;
-
 }
+
 @keyframes easeInNav {
     from {
         opacity: 0;
@@ -204,46 +205,6 @@ section h2 {
     padding-right:24em;
 }
 
-
-.skew-me{
-    height:100px;
-    width:100%;
-    background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#222222), color-stop(0.49, #222222), color-stop(0.51, #f5f5f5), to(#f5f5f5));
-    -webkit-background-size: 49px 100%;
-}
-
-.skew-me2 {
-    position: relative; /* Needed for absolute positioning of the pseudo-element */
-    background-color: transparent; /* Your element's background color */
-    height: 0px; /* Height of the element */
-  }
-  
-  .skew-me2:after {
-    content: '';
-    background-repeat: repeat-x;
-    height:100px;
-    width:100%;
-    position: absolute;
-    background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#222222), color-stop(0.49, #222222), color-stop(0.51, transparent), to(transparent));
-    -webkit-background-size: 49px 100%;
-    transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
-    opacity: 0;
-    visibility: hidden;
-  }
-
-  .skew-me2.show-on-scroll:after {
-    opacity: 1;
-    visibility: visible;
-}
-
-.skew-me3{
-    height:20px;
-    width:100%;
-    background: -webkit-gradient(radial, 50% 100%, 0, 50% 100%, 40, from(#ccb34d), color-stop(0.49, #ccb34d), color-stop(0.51, #4d5738), to(#4d5738));
-    -webkit-background-size: 25px 100%;
-    position:relative;
-
-}
 /* Contact Section and Footer */
 footer {
     background-color: var(--primary-color);
@@ -280,7 +241,36 @@ footer{
     background-color: #ccb34d;
     color: #404040
 }
-@media (prefers-color-scheme: dark) {
+
+@media screen and (max-width: 428px) {
+    .hero-img{
+        height: 10vh;
+    }
+/* Initial state of the content before it moves into place */
+.hero-img {
+    transform: translateY(-100vh); /* Start off-screen, above the viewport */
+    opacity: 0;
+    transition: transform 1s ease-out, opacity 1s ease-out; /* Smooth transition for the transform and opacity */
+  }
+  
+  /* Class to apply to content to move it into view */
+  .hero-img {
+    transform: translateY(0); /* Move content to its final position */
+    opacity: 1;
+  }
+
+nav{
+    display: inline;
+}
+
+nav a{
+    font-size: 15px;
+
+
+}
+  
+}
+@media screen and (prefers-color-scheme: dark) {
     body {
         --background-color: var(--dark-background-color);
         --text-color: var(--dark-text-color);
@@ -291,7 +281,7 @@ footer{
 
 
 /* Responsive Design for Mobile */
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     nav ul {
         flex-direction: column;
     }
